# statico

./: Cargo.toml  README.md
src/: hyper_srv.rs  main.rs  pretty.rs  uring.rs
