[package]
name = "statico"
version = "0.1.0"
edition = "2021"
authors = ["Nicola Bonelli <nicola@larthia.com>"]
description = "A simple, high-performance HTTP webserver implemented in Rust that serves static responses"
license = "MIT OR Apache-2.0"
repository = "https://github.com/awgn/statico"
readme = "README.md"
keywords = ["cli", "utility", "benchmark", "http"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
bytes = "1.0"
socket2 = { version = "0.6", features = ["all"] }
anyhow = "1.0"
num_cpus = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.4", optional = true }

[features]
default = []
io_uring = ["tokio-uring"]

[profile.release]
debug = false
opt-level = 3
strip = true
codegen-units = 1
lto = true
